--- a/project/apps/Home/Templates/Home/index.html
+++ b/project/apps/Home/Templates/Home/index.html
@@ -7,8 +7,8 @@
 {% block CONTENIDO %}
 
   <a href="{% url 'asegurado:home' %}">Ir a Asegurados</a>
+  <a href="{% url 'aseguradoras:home' %}">Ir a Aseguradoras</a>
     
-    <br>
  
 
 {% endblock CONTENIDO %}
