app + form pólizas creado

--- a/project/apps/Home/Templates/Home/index.html
+++ b/project/apps/Home/Templates/Home/index.html
@@ -7,7 +7,10 @@
 {% block CONTENIDO %}
 
   <a href="{% url 'asegurado:home' %}">Ir a Asegurados</a>
+
   <a href="{% url 'aseguradoras:home' %}">Ir a Aseguradoras</a>
+
+  <a href="{% url 'polizas:home' %}">Ir a Polizas</a>
     
  
 
