--- a/project/apps/Home/Templates/Home/index.html
+++ b/project/apps/Home/Templates/Home/index.html
@@ -6,12 +6,25 @@
 
 {% block CONTENIDO %}
 
-  <a href="{% url 'asegurado:home' %}">Ir a Asegurados</a>
 
-  <a href="{% url 'aseguradoras:home' %}">Ir a Aseguradoras</a>
+  <a href="{% url 'asegurado:home' %}"> 
+        
+        <button>Asegurados</button>
+      </a>
 
-  <a href="{% url 'polizas:home' %}">Ir a Polizas</a>
-    
+  <a href="{% url 'aseguradoras:home' %}"> 
+        
+        <button>Aseguradoras</button>
+      </a>
+
+      
+      <a href="{% url 'polizas:home' %}"> 
+        
+        <button>Pólizas</button>
+      </a>
+
+      
+
  
 
 {% endblock CONTENIDO %}
