--- a/project/apps/aseguradoras/templates/aseguradoras/base.html
+++ b/project/apps/aseguradoras/templates/aseguradoras/base.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        <h1 style="color:blue">
+        <h1 style="color:red">
             
             {% block TITULO %}
                 Lo que sea
