--- a/project/apps/polizas/templates/polizas/base.html
+++ b/project/apps/polizas/templates/polizas/base.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        <h1 style="color:blue">
+        <h1 style="color:green">
             
             {% block TITULO %}
                 Lo que sea
